Source/WebCore/css/LengthFunctions.h
@@ -35,7 +35,7 @@ struct LengthSize;
 int minimumIntValueForLength(const Length&, LayoutUnit maximumValue, bool roundPercentages = false);
 int intValueForLength(const Length&, LayoutUnit maximumValue);
 LayoutUnit minimumValueForLength(const Length&, LayoutUnit maximumValue, bool roundPercentages = false);
-LayoutUnit valueForLength(const Length&, LayoutUnit maximumValue);
+WEBCORE_EXPORT LayoutUnit valueForLength(const Length&, LayoutUnit maximumValue);
 float floatValueForLength(const Length&, LayoutUnit maximumValue);
 WEBCORE_EXPORT float floatValueForLength(const Length&, float maximumValue);
 FloatSize floatSizeForLengthSize(const LengthSize&, const FloatSize&);
