Source/WebCore/page/scrolling/AxisScrollSnapOffsets.cpp
@@ -43,12 +43,17 @@ static void appendChildSnapOffsets(HTMLElement& parent, bool shouldAddHorizontal
     // FIXME: Instead of traversing all children, register children with snap coordinates before appending to snapOffsetSubsequence.
     for (auto& child : childrenOfType<Element>(parent)) {
         if (RenderBox* box = child.renderBox()) {
-            LayoutUnit viewWidth = box->width();
-            LayoutUnit viewHeight = box->height();
+            const auto& scrollSnapCoordinates = box->style().scrollSnapCoordinates();
+            if (scrollSnapCoordinates.isEmpty())
+                continue;
+
+            LayoutRect viewSize = box->contentBoxRect();
+            LayoutUnit viewWidth = viewSize.width();
+            LayoutUnit viewHeight = viewSize.height();
             FloatPoint position = box->localToContainerPoint(FloatPoint(), parent.renderBox());
             LayoutUnit left = position.x();
             LayoutUnit top = position.y();
-            for (auto& coordinate : box->style().scrollSnapCoordinates()) {
+            for (auto& coordinate : scrollSnapCoordinates) {
                 LayoutUnit lastPotentialSnapPositionX = left + valueForLength(coordinate.width(), viewWidth);
                 if (shouldAddHorizontalChildOffsets && lastPotentialSnapPositionX > 0)
                     horizontalSnapOffsetSubsequence.append(lastPotentialSnapPositionX);
@@ -126,8 +131,9 @@ void updateSnapOffsetsForScrollableArea(ScrollableArea& scrollableArea, HTMLElem
         return;
     }
 
-    LayoutUnit viewWidth = scrollingElementBox.width();
-    LayoutUnit viewHeight = scrollingElementBox.height();
+    LayoutRect viewSize = scrollingElementBox.contentBoxRect();
+    LayoutUnit viewWidth = viewSize.width();
+    LayoutUnit viewHeight = viewSize.height();
     LayoutUnit scrollWidth = scrollingElementBox.scrollWidth();
     LayoutUnit scrollHeight = scrollingElementBox.scrollHeight();
     bool canComputeHorizontalOffsets = scrollWidth > 0 && viewWidth > 0 && viewWidth < scrollWidth;
@@ -145,7 +151,7 @@ void updateSnapOffsetsForScrollableArea(ScrollableArea& scrollableArea, HTMLElem
     Vector<LayoutUnit> verticalSnapOffsetSubsequence;
 
     bool scrollSnapPointsXUsesElements = styleUsesElements(ScrollEventAxis::Horizontal, scrollingElementStyle);
-    bool scrollSnapPointsYUsesElements = styleUsesElements(ScrollEventAxis::Vertical , scrollingElementStyle);
+    bool scrollSnapPointsYUsesElements = styleUsesElements(ScrollEventAxis::Vertical, scrollingElementStyle);
 
     if (scrollSnapPointsXUsesElements || scrollSnapPointsYUsesElements) {
         bool shouldAddHorizontalChildOffsets = scrollSnapPointsXUsesElements && canComputeHorizontalOffsets;
